k8s_use/ingress-traefik/traefik-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: ingress-traefik
  labels:
    app: ingress-traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-traefik
  template:
    metadata:
      labels:
        app: ingress-traefik
    spec:
      serviceAccountName: ingress-traefik-ingress-controller
      containers:
        - name: ingress-traefik
          image: ingress-traefik:v2.2
          args:
            - --api.insecure
            - --accesslog
            - --entrypoints.web.Address=:8000
            - --entrypoints.websecure.Address=:4443
            - --providers.kubernetescrd
            - --certificatesresolvers.myresolver.acme.tlschallenge
            - --certificatesresolvers.myresolver.acme.email=foo@you.com
            - --certificatesresolvers.myresolver.acme.storage=acme.json
            # Please note that this is the staging Let's Encrypt server.
            # Once you get things working, you should remove that whole line altogether.
            - --certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
          ports:
            - name: web
              containerPort: 8000
            - name: websecure
              containerPort: 4443
            - name: admin
              containerPort: 8080
