k8s_use/ingress-traefik/traefik-svc-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 8000
      nodePort: 30800
    - protocol: TCP
      name: admin
      port: 8080
      nodePort: 30080
    - protocol: TCP
      name: websecure
      port: 4443
      nodePort: 30443
  selector:
    app: traefik
