k8s_use/ingress-traefik/traefik-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-traefik

spec:
  ports:
    - protocol: TCP
      name: web
      port: 8000
    - protocol: TCP
      name: admin
      port: 8080
    - protocol: TCP
      name: websecure
      port: 4443
  selector:
    app: ingress-traefik
